objdir/test/spec/good/TC5003_CueTextSingleSubclass.vtt
WEBVTT

00:11.000 --> 00:13.000
<u.class>Hey this is a test!</u>