objdir/test/spec/bad/TC5040_DisallowAnnotationTimeStamp.vtt
WEBVTT

00:11.000 --> 00:15.000
We <00:13.000 Annotation Here>are in New York City